--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
-/* ------------------------------- Colours */
+/*--------------------------------------------Colors*/
 
 .bg-color-name-title {
     background-color: #676767;
@@ -12,6 +12,10 @@
 
 .bg-color-personal-info {
     background-color: #f4f4f4;
+}
+
+.bg-color-work-history {
+    background-color: #9b59b6;
 }
 
 .ui-menu-color-home {
@@ -30,7 +34,24 @@
     background-color: #525252;
 }
 
-/* ------------------------------- Special paddings/margins/text */
+.row-table {
+    display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+
+/* ----------------------------------------Special paddings/margins/text */
 
 h1,
 h2,
@@ -54,7 +75,7 @@ h4 {
 }
 
 .row-table {
-    display: table;    
+    display: table;
 }
 
 .section-column {
@@ -63,6 +84,7 @@ h4 {
     float: none;
 }
 
+.history-heading,
 .section-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
@@ -70,7 +92,7 @@ h4 {
     margin-bottom: 40px;
 }
 
-/* ------------------------------- Heading */
+/*--------------------------------------------Heading*/
 
 header {
     margin: 0;
@@ -156,14 +178,14 @@ header {
     letter-spacing: 2px;
 }
 
-/* ------------------------------- Hover.css */
+/*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
     background: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
 
-/* ------------------------------- Footer */
+/* ----------------------------------------Footer */
 
 footer {
     background-color: #525252;
@@ -189,7 +211,6 @@ footer {
 
 .social-links {
     padding-bottom: 15px;
-
 }
 
 .social-links li a i {
@@ -201,7 +222,7 @@ footer {
     line-height: 7px;
     text-align: center;
     color: #fafafa;
-    background-color: #8f8f8f;
+    background: #8f8f8f;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
@@ -216,7 +237,7 @@ footer {
     padding: 20px;
 }
 
-/* ------------------------------- Three Reasons */
+/* ----------------------------------------Three Reasons */
 
 .three-reasons-icon {
     font-size: 26px;
@@ -227,7 +248,7 @@ footer {
     margin-bottom: 15px;
 }
 
-/* ------------------------------- Personal Info */
+/* ----------------------------------------Personal Info */
 
 .personal-info-item {
     margin-bottom: 20px;
@@ -235,16 +256,15 @@ footer {
     clear: both;
 }
 
-.personal-info-item .key, 
+.personal-info-item .key,
 .personal-info-item .value {
     padding-right: 8px;
     display: inline-block;
 }
 
-.personal-info-item .key p, 
+.personal-info-item .key p,
 .personal-info-item .value p {
     margin: 0;
-
 }
 
 .personal-info-item .key {
@@ -261,4 +281,74 @@ footer {
 .personal-info-item .value {
     position: relative;
     width: 60%;
+}
+
+/* ----------------------------------------Skills */
+
+.progress {
+    position: relative;
+    line-height: inherit;
+    height: 25px;
+    margin-bottom: 4px;
+}
+
+.progress-type {
+    position: absolute;
+    left: 0px;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25, 25, 25, 0.2);
+}
+
+.progress-section {
+    margin: 40px 20px;
+}
+
+/* ----------------------------------------Work History */
+
+.history-heading {
+    color: #fafafa;    
+    margin-bottom: 50px;
+}
+
+.timeline-item  {
+    padding: 4em 2em 0em 2em;
+    position: relative;
+    color: #fafafa;
+    border-left: 1px solid;
+}
+
+.timeline-item p {
+    padding: 0;
+    margin-inline-end: 0;
+}
+
+.timeline-item:before {
+    content: attr(data-dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "Exo", sans-serif;
+    font-weight: 500;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:after {
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content: '';
+    background: #fafafa;
+}
+
+.history-items {
+    margin-bottom: 30px;
 }
